@@ -3,7 +3,7 @@
  * Visual Theme Customizer
  *
  * @package Visual
- * @since Visual 1.2
+ * @since Visual 0.1
  */
 
 /**
@@ -11,7 +11,7 @@
  *
  * @param WP_Customize_Manager $wp_customize Theme Customizer object.
  *
- * @since Visual 1.2
+ * @since Visual 0.1
  */
 function visual_customize_register( $wp_customize ) {
 	$wp_customize->get_setting( 'blogname' )->transport        = 'postMessage';
@@ -22,7 +22,7 @@ add_action( 'customize_register', 'visual_customize_register' );
 /**
  * Binds JS handlers to make Theme Customizer preview reload changes asynchronously.
  *
- * @since Visual 1.2
+ * @since Visual 0.1
  */
 function visual_customize_preview_js() {
 	wp_enqueue_script( 'visual_customizer', get_template_directory_uri() . '/js/customizer.js', array( 'customize-preview' ), '20120827', true );
